enhance markdown according to Task

--- a/immo-project.ipynb
+++ b/immo-project.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imports"
+    "### Imports"
    ]
   },
   {
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: /Users/tobiaskoller/Documents/ADS Projekt/ADS_Project_group3-2\n"
+      "Current working directory: c:\\Users\\FMeic\\data_science\\ADS_Project_group3\n"
      ]
     }
    ],
@@ -87,7 +87,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Web (Immoscout24) Scraping"
+    "# Data Collection\n",
+    "In this phase, we focus on gathering the necessary data for our project. We start by identifying the data sources, which can include databases, APIs, and public datasets. Once we have determined where the data will come from, we proceed with the data acquisition process. This involves collecting the data through various methods such as web scraping, querying databases, or accessing data through APIs.\n",
+    "\n",
+    "### Web Scraping from Immoscout24\n",
+    "As part of our data collection efforts for the immo-project, we will be utilizing web scraping techniques to extract relevant information from the swiss immo plattform **Immoscout24**. This will allow us to gather valuable data that will contribute to our project."
    ]
   },
   {
@@ -254,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cleansing of Scraped Data"
+    "### Cleansing of Scraped Data"
    ]
   },
   {
@@ -599,12 +603,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compute new features\n"
+    "# Data Cleaning and Preprocessing\n",
+    "\n",
+    "### Data Reduction\n",
+    "If necessary, we will reduce the dimensionality or data volume to improve performance. This step can help to simplify our data and make our subsequent analyses more efficient.\n",
+    "\n",
+    "We get rid of the following feautures, since they are not valuable for a ML model:\n",
+    "- Title                    \n",
+    "- Address                  \n",
+    "- Description              \n",
+    "- URL                      \n",
+    "- Date  \n",
+    "- Verfügbarkeit\n",
+    "- Anzahl Etagen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cleansing = pd.read_csv('immoscout24_zh_cleansed.csv', sep=';')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Transformation\n",
+    "In the following cells we normalize our data, handle categorical data, and create new variables if necessary. This step is essential for preparing our data for machine learning algorithms, which often require data to be in a specific format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cleansing['Rooms'] = pd.to_numeric(df_cleansing['Rooms'], errors='coerce')\n",
+    "df_cleansing['Date'] = pd.to_datetime(df_cleansing['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -681,10 +724,66 @@
     }
    ],
    "source": [
-    "df_cleansing = pd.read_csv('immoscout24_zh_cleansed.csv', sep=';')\n",
-    "df_cleansing['Rooms'] = pd.to_numeric(df_cleansing['Rooms'], errors='coerce')\n",
-    "df_cleansing['Date'] = pd.to_datetime(df_cleansing['Date'])\n",
     "df_cleansing.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "get rid of unusable Features:\n",
+    "- Title                    \n",
+    "- Address                  \n",
+    "- Description              \n",
+    "- URL                      \n",
+    "- Date  \n",
+    "- Verfügbarkeit\n",
+    "- Anzahl Etagen\n",
+    "\n",
+    "Must be Categorical:\n",
+    "- Objekttyp   \n",
+    "    ['Wohnung', 'Maisonette / Duplex', 'Loft', 'Attikawohnung',\n",
+    "       'Reihenfamilienhaus', 'Einfamilienhaus', 'Dachwohnung',\n",
+    "       'Hobbyraum', 'Einzelzimmer', 'Terrassenwohnung', 'Studio',\n",
+    "       'Doppeleinfamilienhaus', 'Bauernhaus', 'Schloss',\n",
+    "       'Mehrfamilienhaus', 'Villa', 'Kellerabteil', 'Terrassenhaus', nan]       \n",
+    "\n",
+    "must be changed:\n",
+    "- Etage \n",
+    "    - eg = 0   \n",
+    "- remove unit (\"m2\", \"m\"\n",
+    "    - Wohnfläche \n",
+    "    - Nutzfläche\n",
+    "    - Raumhöhe\n",
+    "    - Grundstückfläche\n",
+    "    - Kubatur\n",
+    "    - Hallenhöhe\n",
+    "    - Mindestnutzfläche\n",
+    "- remove coma (transform to int)\n",
+    "    - Baujahr \n",
+    "    - Anzahl Wohnungen\n",
+    "    - Letztes Renovationsjahr\n",
+    "    - Anzahl Toiletten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, '18 m2'], dtype=object)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleansing['Mindestnutzfläche'].unique()"
    ]
   },
   {
@@ -703,6 +802,13 @@
    "source": [
     "nan_count = df_cleansing['Address'].isna().sum()\n",
     "print(nan_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature Engineering\n"
    ]
   },
   {
@@ -3313,6 +3419,115 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exploratory Data Analysis\n",
+    "\n",
+    "We want to have a solid understanding of our dataset's characteristics which can help us to make informed decisions in the subsequent stages of our project. Therefore we do a **correlation analysis** to understand to correlataions within the data. Since we know the power of visual representation of data a **Visualization** is important. Use plots and charts to get a visual understanding of the data distributions and relationships is the goal for the follwing cells. To compare the data we first bring the features to the same scale.\n",
+    "\n",
+    "- Feature Scaling (to have all the features on the same scale)\n",
+    "    - `from sklearn.preprocessing import StandardScaler`\n",
+    "- Do the correlation analysis\n",
+    "- filter attributes \n",
+    "    - according to correlation analysis\n",
+    "- additionaly\n",
+    "    - geo map\n",
+    "\n",
+    "##### Goal:\n",
+    "Find which parameters are useful and which can be ignored due to correlation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# correlation matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepear the data\n",
+    "\n",
+    "Before starting modeling we have to prepear the dataset accordingly. We have to split into train and test set. However for most of the models it is needed that label (y) and features (X) are separated as well. \n",
+    "\n",
+    "\n",
+    "- Train/Test Split\n",
+    "    - 70/30\n",
+    "- Split X/y (Feature and Label)\n",
+    "    - `X_train = train_data.loc[:,train_data.columns != \"Price\"]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modeling\n",
+    "To address the regression problem of predicting the prices of houses we go through several steps while modeling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Evaluation\n",
+    "\n",
+    "## Choose Model(s)\n",
+    "For our regression problem, we will evaluate and compare the following models to find the best fit for predicting house prices. The models include both linear and non-linear approaches to accommodate different patterns and complexities in the data.\n",
+    "\n",
+    "### Models to Evaluate\n",
+    "1. **Random Forest Regressor**\n",
+    "   - A robust ensemble model that uses multiple decision trees to produce a more stable and accurate prediction. It's generally good at handling outliers and non-linear data.\n",
+    "   - Import with: `from sklearn.ensemble import RandomForestRegressor`\n",
+    "\n",
+    "2. **Linear Regression**\n",
+    "   - A simple yet powerful model that assumes a linear relationship between input variables and the target. It's effective when the relationship is linear and is easy to interpret.\n",
+    "   - Import with: `from sklearn.linear_model import LinearRegression`\n",
+    "\n",
+    "3. **Polynomial Regression**\n",
+    "   - An extension of linear regression that models the relationship as a polynomial. This allows the model to bend with data for non-linear trends while still remaining interpretable.\n",
+    "   - Polynomial Regression is essentially a special case of Linear Regression but involves creating polynomial features from the input variables.\n",
+    "\n",
+    "4. **Neural Network (NN) Model using TensorFlow**\n",
+    "   - A highly flexible and powerful model capable of modeling complex non-linear relationships. Neural networks are particularly useful when we have a large amount of data and the relationship between variables is complex.\n",
+    "   - Implemented using TensorFlow, which provides the tools to build custom neural network architectures.\n",
+    "\n",
+    "## Train Model\n",
+    "Each model will be trained using the same set of training data. This allows for a fair comparison between models based on their performance metrics.\n",
+    "\n",
+    "- **Data Split**: Split the data into training and validation sets to evaluate the model's performance.\n",
+    "- **Training Process**: Fit each model to the training data using their respective training algorithms.\n",
+    "\n",
+    "## Model Evaluation\n",
+    "Evaluate the performance of each model using the following criteria to ensure robustness and reliability:\n",
+    "\n",
+    "- **Validation Techniques**: Implement cross-validation techniques such as K-fold cross-validation to validate the consistency and robustness of each model's performance across different subsets of the data.\n",
+    "- **Performance Metrics**: Assess the model using regression-specific metrics including:\n",
+    "  - RMSE (Root Mean Square Error): Measures the average magnitude of the errors in a set of predictions, without considering their direction. It’s particularly useful to compare prediction errors of different models and datasets.\n",
+    "  - MAE (Mean Absolute Error): Provides a measure of errors between paired observations expressing the same phenomenon.\n",
+    "  - R² (Coefficient of Determination): Indicates the proportion of the variance in the dependent variable that is predictable from the independent variables.\n",
+    "- **Iterate**: Based on the performance metrics, refine and iterate on the model's parameters to enhance prediction accuracy and align the model more closely with business needs.\n",
+    "\n",
+    "\n",
+    "## Model Selection\n",
+    "The final model selection will be based on a combination of performance metrics and the model's ability to generalize to unseen data. We aim to choose a model that not only performs well but also provides the right balance of complexity and interpretability suited for our use case.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Meteo"
    ]
   },
@@ -4594,54 +4809,6 @@
    "source": [
     "#I hope my team is happy now."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data Visualization\n",
-    "\n",
-    "- correlation matrix\n",
-    "- map with all datapoints\n",
-    "\n",
-    "##### Goal:\n",
-    "Find out which parameters are useful and which can be ignored."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Models (Training)\n",
-    "Test which model is best."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Random Forest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OpenAI"
-   ]
   }
  ],
  "metadata": {
@@ -4660,7 +4827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
