Update OpenWeatherMap API key and version

--- a/sun_hour.ipynb
+++ b/sun_hour.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "API_key = \"c3200ed5cfad6c3720582807320f008c\"\n",
+    "API_key = \"20de95f2e84c39c8fc607831c30d8925\"\n",
     "\n",
     "url = \"https://history.openweathermap.org/data/2.5/aggregated/month\"\n",
     "params = {\n",
@@ -45,6 +45,13 @@
     "print(response.json())\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Message from open weather: \"History API are not available for Free subscribers\""
    ]
   },
   {
@@ -103,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
