Update image sources in README.md and immo-project.ipynb

--- a/immo-project.ipynb
+++ b/immo-project.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "Hello, we are Tobias, Sascha, and Florian. Our goal for this project is to build a predictive model for Swiss housing prices. We aim to achieve this by leveraging current web data. \n",
     "\n",
-    "![Swiss House](https://archivaldesigns.com/cdn/shop/products/Peach-Tree-Front_1200x.jpg?v=1648224612)\n",
+    "![Family house during golden hour.](resources\\Peach-Tree-House.png)\n",
+    "<br><small>[Image Source](https://archivaldesigns.com/collections/all/products/peach-tree-ii-house-plan?view=new2), Retrieved April 29, 2024</small>\n",
+    "\n",
     "\n",
     "This project will involve several steps:\n",
     "\n",
@@ -20040,9 +20042,8 @@
     "Since the earth is not flat, the Pythagorean theorem would not be accurate for calculating distances between geographical coordinates. The Haversine formula or other spherical geometry methods are more appropriate for that purpose.\n",
     "\n",
     "\n",
-    "![Image description](resources\\Haversine.png)\n",
-    "\n",
-    "[Image Source](https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.vcalc.com%2Fattachments%2Fe6d11679-da27-11e2-8e97-bc764e04d25f%2F220px-Law-of-haversines.svg.png&tbnid=IWPxBR6bJWrqlM&vet=12ahUKEwjcuMO1-JmFAxU9kP0HHZ3sBuoQMygQegQIARBu..i&imgrefurl=https%3A%2F%2Fwww.vcalc.com%2Fwiki%2Fvcalc%2Fhaversine-distance&docid=MOeiC0D7gb9SqM&w=220&h=220&q=Haversine%20formula&ved=2ahUKEwjcuMO1-JmFAxU9kP0HHZ3sBuoQMygQegQIARBu)"
+    "![Haversine Theorem](resources\\Haversine.png)\n",
+    "<br><small>[Image Source](https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.vcalc.com%2Fattachments%2Fe6d11679-da27-11e2-8e97-bc764e04d25f%2F220px-Law-of-haversines.svg.png&tbnid=IWPxBR6bJWrqlM&vet=12ahUKEwjcuMO1-JmFAxU9kP0HHZ3sBuoQMygQegQIARBu..i&imgrefurl=https%3A%2F%2Fwww.vcalc.com%2Fwiki%2Fvcalc%2Fhaversine-distance&docid=MOeiC0D7gb9SqM&w=220&h=220&q=Haversine%20formula&ved=2ahUKEwjcuMO1-JmFAxU9kP0HHZ3sBuoQMygQegQIARBu), Retrieved March 29, 2024</small>"
    ]
   },
   {
