Update coordinates.py and create_distance.ipynb to fill nan coordinates with data from goolge

--- a/create_distance.ipynb
+++ b/create_distance.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,29 +26,145 @@
     "import requests\n",
     "import pandas as pd\n",
     "from math import radians, cos, sin, sqrt, atan2\n",
-    "\n"
+    "\n",
+    "import googlemaps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "address = \"8400 Winterthur, Theaterstrasse 17.1\"\n",
-    "#address = input(\"Enter the address: \")"
+    "#address = \"8400 Winterthur, Theaterstrasse 17.1\"\n",
+    "#address = input(\"Enter the address: \")\n",
+    "\n",
+    "address = \"8000 Zurich\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# google maps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://api3.geo.admin.ch/rest/services/api/SearchServer?searchText=8400+Winterthur%2C+Theaterstrasse+17.1&origins=address&type=locations\n"
+      "Error:  Invalid API key provided.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'address_components': [{'long_name': '8000',\n",
+       "    'short_name': '8000',\n",
+       "    'types': ['postal_code']},\n",
+       "   {'long_name': 'Zürich',\n",
+       "    'short_name': 'Zürich',\n",
+       "    'types': ['locality', 'political']},\n",
+       "   {'long_name': 'Zürich District',\n",
+       "    'short_name': 'Zürich District',\n",
+       "    'types': ['administrative_area_level_2', 'political']},\n",
+       "   {'long_name': 'Zurich',\n",
+       "    'short_name': 'ZH',\n",
+       "    'types': ['administrative_area_level_1', 'political']},\n",
+       "   {'long_name': 'Switzerland',\n",
+       "    'short_name': 'CH',\n",
+       "    'types': ['country', 'political']}],\n",
+       "  'formatted_address': '8000 Zürich, Switzerland',\n",
+       "  'geometry': {'location': {'lat': 47.38181489999999,\n",
+       "    'lng': 8.535326099999999},\n",
+       "   'location_type': 'APPROXIMATE',\n",
+       "   'viewport': {'northeast': {'lat': 47.38316388029149,\n",
+       "     'lng': 8.5366750802915},\n",
+       "    'southwest': {'lat': 47.3804659197085, 'lng': 8.533977119708497}}},\n",
+       "  'place_id': 'ChIJrcONeA4KkEcRB_FARs0EnLQ',\n",
+       "  'types': ['postal_code']}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from keys import keyFlorian\n",
+    "try:\n",
+    "    gmaps = googlemaps.Client(key=\"abd\")\n",
+    "except Exception as e:\n",
+    "    print(\"Error: \", e)\n",
+    "# Geocoding an address\n",
+    "geocode_result = gmaps.geocode(address)\n",
+    "geocode_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coordinates for 8000 Zurich are: Latitude = 47.38181489999999, Longitude = 8.535326099999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract latitude and longitude\n",
+    "if geocode_result:\n",
+    "    latitude = geocode_result[0]['geometry']['location']['lat']\n",
+    "    longitude = geocode_result[0]['geometry']['location']['lng']\n",
+    "    print(f\"Coordinates for {address} are: Latitude = {latitude}, Longitude = {longitude}\")\n",
+    "else:\n",
+    "    print(\"Address not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_google_coordinates(address):\n",
+    "    gmaps = googlemaps.Client(key=keyFlorian)\n",
+    "    # Geocoding an address\n",
+    "    geocode_result = gmaps.geocode(address)\n",
+    "    if geocode_result:\n",
+    "        latitude = geocode_result[0]['geometry']['location']['lat']\n",
+    "        longitude = geocode_result[0]['geometry']['location']['lng']\n",
+    "    else:\n",
+    "        latitude = None\n",
+    "        longitude = None\n",
+    "    return latitude, longitude"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# geo.admin.ch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api3.geo.admin.ch/rest/services/api/SearchServer?searchText=Badenerstrasse+250%2C+8052+Z%C3%BCrich&origins=address&type=locations\n"
      ]
     }
    ],
@@ -68,47 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'results': [{'attrs': {'detail': 'theaterstrasse 17.1 8400 winterthur 230 winterthur ch zh',\n",
-       "    'featureId': '201032451_0',\n",
-       "    'geom_quadindex': '030010211112102121200',\n",
-       "    'geom_st_box2d': 'BOX(697167.118926371 262226.7588384855,697167.118926371 262226.7588384855)',\n",
-       "    'label': 'Theaterstrasse 17.1 <b>8400 Winterthur</b>',\n",
-       "    'lat': 47.50360870361328,\n",
-       "    'lon': 8.728364944458008,\n",
-       "    'num': 171,\n",
-       "    'objectclass': '',\n",
-       "    'origin': 'address',\n",
-       "    'rank': 7,\n",
-       "    'x': 262226.75,\n",
-       "    'y': 697167.125,\n",
-       "    'zoomlevel': 10},\n",
-       "   'id': 1533870,\n",
-       "   'weight': 4},\n",
-       "  {'attrs': {'detail': 'theaterstrasse 17 8400 winterthur 230 winterthur ch zh',\n",
-       "    'featureId': '2323240_0',\n",
-       "    'geom_quadindex': '030010211112013212300',\n",
-       "    'geom_st_box2d': 'BOX(697128.5668860576 262216.11449080077,697128.5668860576 262216.11449080077)',\n",
-       "    'label': 'Theaterstrasse 17 <b>8400 Winterthur</b>',\n",
-       "    'lat': 47.503517150878906,\n",
-       "    'lon': 8.727851867675781,\n",
-       "    'num': 17,\n",
-       "    'objectclass': '',\n",
-       "    'origin': 'address',\n",
-       "    'rank': 7,\n",
-       "    'x': 262216.125,\n",
-       "    'y': 697128.5625,\n",
-       "    'zoomlevel': 10},\n",
-       "   'id': 897484,\n",
-       "   'weight': 1}]}"
+       "{'fuzzy': 'true', 'results': []}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
