Refactor code for database construction

--- a/create_db.ipynb
+++ b/create_db.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,26 +43,40 @@
      "text": [
       "Using default tag: latest\n",
       "latest: Pulling from library/mysql\n",
-      "Digest: sha256:9d1c923e5f66a89607285ee2641f8a53430a1ccd5e4a62b35eb8a48b74b9ff48\n",
+      "Digest: sha256:9de9d54fecee6253130e65154b930978b1fcc336bcc86dfd06e89b72a2588ebe\n",
       "Status: Image is up to date for mysql:latest\n",
       "docker.io/library/mysql:latest\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# this runs the installation in docker and run mysql container in your terminal\n",
+    "!docker pull mysql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\n",
       "What's Next?\n",
-      "  View a summary of image vulnerabilities and recommendations → docker scout quickview mysql\n",
-      "docker: Error response from daemon: Conflict. The container name \"/mysql\" is already in use by container \"b3fb98c0d600c186cda1d1da0b2518716eb8cb534f87a7d9e95bacd31e7ac40b\". You have to remove (or rename) that container to be able to reuse that name.\n",
-      "See 'docker run --help'.\n"
+      "  View a summary of image vulnerabilities and recommendations → docker scout quickview mysql\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6377a448470ab9127225e930b33f1c50a2431710ebd5a637c34400458e6c14bf\n"
      ]
     }
    ],
    "source": [
-    "# this runs the installation in docker and run mysql container in your terminal\n",
-    "!docker pull mysql\n",
     "!docker run --name mysql --publish 3306:3306 -e MYSQL_ROOT_PASSWORD=password -d mysql"
    ]
   },
@@ -115,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +149,8 @@
     "import csv\n",
     "import os\n",
     "import pymysql\n",
-    "\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
     "#connect to mysql:\n",
     "connection = pymysql.connect(\n",
     "    host=\"localhost\",\n",
@@ -153,17 +168,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## immoDB erstellen\n",
+    "Erst erstellen wir die Datenbank und füllen diese dann mit den Daten aus dem Haupt-Projekt:\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Connection.close of <pymysql.connections.Connection object at 0x0000016643C8DC50>>"
+       "<bound method Connection.close of <pymysql.connections.Connection object at 0x0000025C216CE590>>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,42 +201,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Connection.close of <pymysql.connections.Connection object at 0x0000016643ABE610>>"
+       "<bound method Connection.close of <pymysql.connections.Connection object at 0x0000025C21BAE590>>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "connection = pymysql.connect(\n",
+    "    host=\"localhost\",\n",
+    "    port=3306, \n",
+    "    user=\"root\", \n",
+    "    password=\"password\", \n",
+    "    charset='utf8',\n",
+    "    database='immoDB',\n",
+    ")\n",
     "cursor = connection.cursor()\n",
-    "cursor.execute(\"USE immoDB;\")\n",
     "cursor.execute(\"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS Properties (\n",
-    "    id INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "    date_scraped DATE,\n",
-    "    num_rooms FLOAT,\n",
-    "    area_size FLOAT,\n",
-    "    price FLOAT,\n",
-    "    address VARCHAR(255),\n",
-    "    title VARCHAR(255),\n",
-    "    ad_text TEXT\n",
-    ");\n",
-    "\"\"\")\n",
+    "               CREATE TABLE IF NOT EXISTS Properties (\n",
+    "               id INT AUTO_INCREMENT PRIMARY KEY\n",
+    "               );\"\"\")\n",
     "connection.commit()\n",
     "connection.close"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = pd.read_csv('immoscout24_zh_with_coordinates&distance&weather.csv', sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "985"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine = create_engine('mysql+pymysql://root:password@localhost/immoDB')\n",
+    "\n",
+    "df_clean.to_sql('Properties', con=engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -225,6 +278,14 @@
     }
    ],
    "source": [
+    "connection = pymysql.connect(\n",
+    "    host=\"localhost\",\n",
+    "    port=3306, \n",
+    "    user=\"root\", \n",
+    "    password=\"password\", \n",
+    "    charset='utf8',\n",
+    "    database='immoDB',\n",
+    ")\n",
     "cursor = connection.cursor()\n",
     "cursor.execute(\"SHOW TABLES;\")\n",
     "for table in cursor:\n",
@@ -233,21 +294,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('id', 'int', 'NO', 'PRI', None, 'auto_increment')\n",
-      "('date_scrapped', 'date', 'YES', '', None, '')\n",
-      "('num_rooms', 'float', 'YES', '', None, '')\n",
-      "('area_size', 'float', 'YES', '', None, '')\n",
-      "('price', 'float', 'YES', '', None, '')\n",
-      "('address', 'varchar(255)', 'YES', '', None, '')\n",
-      "('title', 'varchar(255)', 'YES', '', None, '')\n",
-      "('ad_text', 'text', 'YES', '', None, '')\n"
+      "('Price', 'double', 'YES', '', None, '')\n",
+      "('Rooms', 'double', 'YES', '', None, '')\n",
+      "('SquareMeters', 'double', 'YES', '', None, '')\n",
+      "('Etage', 'double', 'YES', '', None, '')\n",
+      "('Baujahr', 'double', 'YES', '', None, '')\n",
+      "('Raumhöhe', 'double', 'YES', '', None, '')\n",
+      "('Anzahl Wohnungen', 'bigint', 'YES', '', None, '')\n",
+      "('Letztes Renovationsjahr', 'double', 'YES', '', None, '')\n",
+      "('Anzahl Toiletten', 'bigint', 'YES', '', None, '')\n",
+      "('Gasanschluss', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Waschmaschine', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Kabel-TV', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Haustiere erlaubt', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Gedeckt', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Mit Gartenhaus', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Parkplatz', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Minergie Bauweise', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Tumbler', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Keller', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Estrich', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Rollstuhlgängig', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Balkon / Terrasse', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Spielplatz', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Altbau', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Stromanschluss', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Neubau', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Cheminée', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Minergie zertifiziert', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Rauchen erlaubt', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Lift', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Steamer', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Garage', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Ruhige Lage', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Hochparterre', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Aussicht', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Reduit', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('No features found', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Abwasseranschluss', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Swimmingpool', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Eckhaus', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Kinderfreundlich', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Wasseranschluss', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Geschirrspüler', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('In Wohngemeinschaft', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Attikawohnung', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Bauernhaus', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Dachwohnung', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Doppeleinfamilienhaus', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Einfamilienhaus', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Einzelzimmer', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Hobbyraum', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Kellerabteil', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Loft', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Maisonette / Duplex', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Mehrfamilienhaus', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Reihenfamilienhaus', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Schloss', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Studio', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Terrassenhaus', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Terrassenwohnung', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Villa', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Objekttyp_Wohnung', 'tinyint(1)', 'YES', '', None, '')\n",
+      "('Latitude', 'double', 'YES', '', None, '')\n",
+      "('Longitude', 'double', 'YES', '', None, '')\n",
+      "('DistanceToStationKM', 'double', 'YES', '', None, '')\n",
+      "('Weather', 'double', 'YES', '', None, '')\n"
      ]
     }
    ],
@@ -255,6 +374,45 @@
     "cursor.execute(\"DESCRIBE Properties;\")\n",
     "for column in cursor:\n",
     "    print(column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2570.0, 2.5, 73.0, 7.0, 2024.0, 2.5, 0, 2024.0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 47.4499626159668, 8.582908630371094, 0.4472630458742848, 28065.00601648351)\n",
+      "(1921.0, 1.5, 26.0, 4.0, 2021.0, 2.5, 0, 2021.0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 47.389892578125, 8.484477996826172, 4.425504317886342, 28065.00601648351)\n",
+      "(2830.0, 3.5, 104.0, 0.0, 2024.0, 2.4, 0, 2024.0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 47.3998908996582, 8.403274536132812, 0.6678443136995067, 27603.43857142853)\n",
+      "(2950.0, 3.5, 90.0, 1.0, 2023.0, 2.5, 9, 2023.0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 47.43076705932617, 8.642346382141113, 1.4910884096893555, 27903.204615384617)\n",
+      "(2950.0, 3.5, 92.0, 1.0, 2024.0, 2.4, 0, 2024.0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 47.446773529052734, 8.579062461853027, 0.7574222390516857, 28065.00601648351)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Connection.close of <pymysql.connections.Connection object at 0x0000025C25970390>>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(\"SELECT * FROM Properties LIMIT 5;\")\n",
+    "# Fetch the results\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "# Print the results\n",
+    "for row in rows:\n",
+    "    print(row)\n",
+    "connection.commit()\n",
+    "connection.close"
    ]
   },
   {
@@ -267,11 +425,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mysql\n"
+     ]
+    }
+   ],
    "source": [
-    "#!docker stop mysql"
+    "!docker stop mysql"
    ]
   },
   {
@@ -283,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +459,7 @@
       "-----------------------------------\n",
       "NT\n",
       "Windows | 10\n",
-      "Datetime: 2024-03-23 14:38:41\n",
+      "Datetime: 2024-04-29 19:04:11\n",
       "Python Version: 3.11.7\n",
       "-----------------------------------\n"
      ]
