Update API key import in sun_hour.ipynb

--- a/sun_hour.ipynb
+++ b/sun_hour.ipynb
@@ -31,8 +31,7 @@
     }
    ],
    "source": [
-    "API_key = \"20de95f2e84c39c8fc607831c30d8925\"\n",
-    "\n",
+    "from keys import API_key\n",
     "url = \"https://history.openweathermap.org/data/2.5/aggregated/month\"\n",
     "params = {\n",
     "    'month': 2,\n",
