Structure Repository. Updated file paths for data files

--- a/openai.ipynb
+++ b/openai.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# This cell imports the scraped data from the main part & reduces it to the most important columns\n",
-    "df = pd.read_csv('immoscout24_zh_all_20240402.csv', sep=';')\n",
+    "df = pd.read_csv('data/immoscout24_zh_all_20240402.csv', sep=';')\n",
     "df_reduced = df[['Title', 'Description', 'Address', 'Rooms', 'SquareMeters', 'CoreAttributes', 'Features']]"
    ]
   },
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('immoscout24_openAI_3.5_untrained_V2.csv', index=False, sep=';')"
+    "df.to_csv('data/immoscout24_openAI_3.5_untrained_V2.csv', index=False, sep=';')"
    ]
   },
   {
